[package]
name = "ucelofka"
version = "0.3.0"
authors = ["Stepan Henek"]
edition = "2018"
description = "Simple program to issue invoices"
license = "GPL-3.0"
readme = "README.md"
keywords = ["cli", "invoice", "git"]
repository = "https://github.com/shenek/ucelofka"
categories = ["command-line-utilities"]

include = ["default", "src"]

[dependencies]
anyhow = "~1.0.26"
chrono = "~0.4.10"
clap = "~2.33.0"
fluent = "~0.10.2"
fluent-bundle = "~0.10.2"
fluent-langneg = "~0.12.1"
git2 = "~0.11.0"
lazy_static = "~1.4.0"
include_dir = { version = "~0.5.0" }
serde = { version = "~1.0.104", features = ["derive"]}
serde_yaml = "~0.8.11"
serde_json = "~1.0.48"
tera = "~1.0.2"
unic-langid = { version = "~0.8.0", features = ["macros"]}

[dev-dependencies]
assert_cmd = "0.12"
tempfile = "3.1"
test-case = "1.0.0"

[[bin]]
name = "ucelofka"
path = "src/main.rs"
