[package]
name = "ucelofka"
version = "0.3.0"
authors = ["Stepan Henek"]
edition = "2018"
description = "Simple program to issue invoices"
license = "GPL-3.0"
readme = "README.md"
keywords = ["cli", "invoice", "git"]
repository = "https://github.com/shenek/ucelofka"
categories = ["command-line-utilities"]

include = ["default", "resources", "src"]

[dependencies]
actix-web = "3.3"
actix-files = "0.5"
anyhow = "~1.0.26"
chrono = "~0.4.10"
clap = "~2.33.0"
fluent = "~0.13.1"
fluent-bundle = "~0.13.1"
fluent-langneg = "~0.13.0"
git2 = "~0.13.6"
lazy_static = "~1.4.0"
include_dir = { version = "~0.6.0" }
serde = { version = "~1.0.104", features = ["derive"]}
serde_yaml = "~0.8.11"
serde_json = "1"
tera = "~1.5.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread"]}
unic-langid = { version = "~0.9.0", features = ["macros"]}

[dev-dependencies]
assert_cmd = "~1.0.1"
tempfile = "~3.1.0"
test-case = "~1.0.0"

[[bin]]
name = "ucelofka"
path = "src/main.rs"
