[package]
name = "ucelofka-data"
version = "0.1.0"
authors = ["Stepan Henek"]
edition = "2018"
description = "Ucelofka common part between frontend and backend part"
license = "GPL-3.0"
readme = "README.md"
keywords = ["invoice"]
repository = "https://github.com/shenek/ucelofka"
categories = ["data-structures"]

[dependencies]
anyhow = "~1.0.26"
chrono = "~0.4.10"
html2text = "~0.2.1"
paste = "1.0"
serde = { version = "~1.0.104", features = ["derive"]}
serde_yaml = "~0.8.11"
