[package]
name = "ucelofka-webapp"
version = "0.1.0"
authors = ["Stepan Henek <stepan@henek.name>"]
edition = "2018"
description = "Ucelofka web frontend"
license = "GPL-3.0"
readme = "README.md"
keywords = ["web", "yew", "ybc"]
repository = "https://github.com/shenek/ucelofka"
categories = ["web-programming"]


[dependencies]
anyhow = "1"
console_error_panic_hook = "0.1"
gloo-net = "0.2"
ucelofka-data = { path="../ucelofka-data/" }
yew = "0.20"
ybc = "0.4.0-beta"
wee_alloc = "0.4"

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z' 
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true
