[package]
name = "ucelofka"
version = "0.3.0"
authors = ["Stepan Henek"]
edition = "2018"
description = "Simple program to issue invoices"
license = "GPL-3.0"
readme = "README.md"
keywords = ["cli", "invoice", "git"]
repository = "https://github.com/shenek/ucelofka"
categories = ["command-line-utilities"]

include = ["default", "resources", "src"]

[dependencies]
actix-web = "3.3"
anyhow = "~1.0.26"
clap = { version = "4.1.8", features = ["cargo", "env"] }
clap_complete = "4.1.4"
fluent = "~0.15.0"
fluent-bundle = "~0.15.0"
fluent-langneg = "~0.13.0"
git2 = "~0.13.6"
lazy_static = "~1.4.0"
include_dir = { version = "~0.6.0" }
intl-memoizer = "~0.5.1"
serde = { version = "~1.0.104", features = ["derive"]}
serde_yaml = "~0.8.11"
tera = "~1.6.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"]}
unic-langid = { version = "~0.9.0", features = ["macros"]}
ucelofka-data = { path="../ucelofka-data/" }
dioxus = "0.4"
dioxus-tui = "0.4"

[dev-dependencies]
assert_cmd = "~1.0.1"
tempfile = "~3.2.0"
test-case = "~1.1.0"

[[bin]]
name = "ucelofka"
path = "src/main.rs"
